# fast-markov

./: .gitignore  .npmignore  .prettierignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.mjs
bench/: index.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
